# nemlig_cli

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  deploy-azure.sh  deploy-n8n-azure.sh  docker-compose.yml  index.html  justfile  meal-planner.html  meal_template.json  n8n_meal_plan_approve.json  n8n_meal_plan_workflow.json  n8n_weekly_grocery.json  n8n_weekly_reminder.json  nemlig_cli.py  nemlig_gui.py  nemlig_mcp.py  pyproject.toml  server.py  train_model.py
