[project]
name = "nemlig-cli"
version = "0.1.0"
description = "CLI for nemlig.com grocery shopping"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "anthropic>=0.40.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
]

[project.scripts]
nemlig = "nemlig_cli:main"
